chapter_istio-ambientmesh/networking/k8s-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  annotations:
    istio.io/for-service-account: handson-blue
  labels:
    app.kubernetes.io/component: waypoint-proxy
  name: handson
  namespace: handson
spec:
  gatewayClassName: istio-waypoint
  listeners:
  - name: mesh
    port: 15008
    protocol: HBONE
